fixing dark mode for the new design

--- a/src/app/faq/faq.component.scss
+++ b/src/app/faq/faq.component.scss
@@ -1,8 +1,3 @@
-:host {
-    display: block;
-    background-color: #e6e6e6;
-}
-
 .mat-stroked-button {
     margin: auto;
     width: 50%;
