--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -24,7 +24,6 @@ span {
 }
 
 .home {
-    background-image: url(../../assets/img/home-background.png); 
     background-position: center; 
     background-attachment: fixed; 
     background-repeat: no-repeat; 
